import java.util.UUID;

public class NoweId {
    public static String przyznajId(){
        return UUID.randomUUID().toString();
    }
}
